# Exam-Seat-Arrangement

./: .replit  FourthYearStudents.xlsx  Procfile  README.md  Test.csv  Test.xlsx  app.py  converter.py  panda.py  pyproject.toml  requirements.txt  stuarrange.txt  studetails.txt  tempCodeRunnerFile.py
.ignore/: tempCodeRunnerFile.py
Student Data/: FourthYearStudents.xlsx  SecondYearStudents.xlsx  ThirdYearStudents.xlsx
Student Timetable/: FourthYearTimetable.xlsx  SecondYearTimetable.xlsx  ThirdYearTimetable.xlsx
static/: dates.txt  home.js  login.js  stuarrange.txt  stuarrange20-06-2023.txt  stuarrange24-04-2023.txt  stuarrange25-02-2023.txt  stuarrange25-04-2023.txt  styles.css
templates/: admin.html  adminhome.html  adminlogin.html  classavailable.html  classdetails.html  displaydata.html  home.html  homestyle.css  reset.html  seating.html  student.html  studentdataupload.html  studentpage.html  style.css  timetable.html  timetableupload.html  uploadeddata.html  uploadpage.html  uploads.html  viewseating.html
uploads/: FourthYearTimetable.xlsx  Test.xlsx  ThirdYearStudents.xlsx  ThirdYearTimetable.xlsx  app.py
